# hdb-resale-app-open-source

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: pipeline.yaml
dashboard/: next.config.ts  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/hdbresale/: layout.tsx  page.tsx
dashboard/src/app/hdbresale/api/predict/: route.ts
dashboard/src/app/hdbresale/api/query/filter-options/: route.ts
dashboard/src/app/hdbresale/api/query/median-price/: route.ts
dashboard/src/app/hdbresale/api/query/transactions/: route.ts
dashboard/src/app/health/: route.ts
dashboard/src/components/: chart-view.tsx  filters.tsx  map-view.tsx  predict-view.tsx
dashboard/src/lib/: duckdb.ts  types.ts  utils.ts
docker/: Dockerfile.dashboard  Dockerfile.etl  Dockerfile.lambda
docker/docker_entrypoint/: docker-entrypoint-dashboard.sh  docker-entrypoint-etl.sh
src/: __init__.py
src/etl/: geocode.py  ingest.py  main.py  process.py  train.py
src/lambda/function/: hdbresale_inference_api.py
terraform/: data.tf  ecs.tf  eventbridge.tf  iam.tf  lambda.tf  outputs.tf  ssm.tf  step_functions.tf  terraform.tf  variables.tf
terraform/aws/policy/: ecr_policy.json  s3_policy.json  ssm_policy.json  ssm_policy_ecs_task_execution.json  step_function_policy.json
terraform/aws/step_function_state/: hdb_resale_app_etl.json
tests/: test_geocode.py  test_ingest.py  test_process.py  test_train.py
