[project]
name = "hdb-resale-app"
version = "0.1.0"
description = "HDB Resale Price Dashboard with ETL pipeline on AWS"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.38.1",
    "pandas>=2.3.3,<3",
    "scikit-learn>=1.5.0",
    "omegaconf>=2.3.0",
    "httpx>=0.27.0",
    "pyarrow>=17.0.0",
    "boto3>=1.35.0",
    "duckdb>=1.1.0",
    "joblib>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.4",
    "pre-commit>=4.0.0",
    "ipykernel>=7.2.0",
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
    "moto[s3]>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
fix = true
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "N806"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"